<resources>
    <string name="app_name">DiscutionsApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <!--String used for all app-->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="logout_text">Logout</string>
    <string name="not_account_text">"Don't have account ?"</string>
    <string name="email_hint_text">user@email.com</string>
    <string name="password_hint_text">123456</string>
    <string name="enter_password_text">Enter a password</string>
    <string name="confirm_password_text">Confirm a password</string>
    <string name="wront_email_text">Enter a valid email</string>
    <string name="wront_password_text">Enter a valid password</string>
    <string name="back_text">Back</string>
    <string name="ok_text">Accept</string>
    <string name="cancel_text">Cancel</string>
    <string name="user_text">Username</string>
    <string name="incorrect_form_text">There is an invalid field</string>
    <string name="incorrect_login_form_text">Incorrect email or password</string>
    <string name="information_text">Information</string>
    <string name="failed_text">Failed</string>
    <string name="success_text">Success</string>
    <string name="remember_text">Remember me</string>
    <string name="ic_google_svg">icon google</string>
    <string name="ic_facebook_svg">icon facebook</string>
    <string name="accept_text">Accept</string>
    <string name="loading_text">Loading</string>
    <string name="profile_text">Profile</string>
    <string name="create_text">Create</string>
    <string name="create_discussion_text">Create discussion</string>
    <string name="delete_text">Delete</string>
    <string name="like_text">Like</string>
    <string name="comment_text">Comment</string>
    <string name="comments_text">Comments</string>
    <string name="send_text">Send</string>
    <string name="home_text">Home</string>
    <string name="heart_text">Heart</string>
    <string name="enter_a_comment_text">Enter a comment</string>

    <!--credentials-->
    <string name="default_client_web_id">968779206986-606peom2r5vetnf9p41pfpc4a0av3g0b.apps.googleusercontent.com</string>
    <string name="fcm_api_key">AAAA4Y-9kUo:APA91bFpnO-3hOMi7_T3616lwyd52F2UkTksWkiseZjbDJ3sAXcffTVCXpRIUYLfOqM1siUcZESVPq97jW65cjeIsQydyz725DcwEKx_TclNlOnUiwLVZ90kvxPwZ3unchyucROZ7X39</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_activity_bottom_navigation_bar">BottomNAvigationBar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="follow">Follow</string>
    <string name="password_text">Password</string>
    <string name="email_text">Email</string>
    <string name="title_activity_complete_profile">CompleteProfileActivity</string>
    <string name="complete_profile_information_text">Before continuing, you need to fill out this information so that users can view your profile correctly.</string>
    <string name="welcome_text">Welcome!</string>
    <string name="male_text">Male</string>
    <string name="female_text">Female</string>
    <string name="presentation_text">Presentation</string>
    <string name="gender_text">Gender</string>
    <string name="finish_text">Finish</string>
    <string name="post_what_you_think">post what you think</string>
    <string name="remember_that_the_objective_of_the_debate_application_is_precisely_that_to_debate_do_not_stop_there_is_no_limitation">Remember that the objective of the debate application is precisely that, to debate. Do not stop, there is no limitation.</string>
    <string name="write_your_post">Write your post</string>
    <string name="post">Post</string>

</resources>
