<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.discutions.app.views.fragments.home.HomeFragment"
        android:label="@string/home_text"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.discutions.app.views.fragments.create.CreateFragment"
        android:label="@string/create_text"
        tools:layout="@layout/fragment_create" />
    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.discutions.app.views.fragments.profile.ProfileFragment"
        android:label="@string/profile_text"
        tools:layout="@layout/fragment_profile" />
</navigation>