<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <ScrollView android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="35dp"
        android:paddingVertical="5dp"
        android:fillViewport="true"
        android:scrollbars="none"
        android:fadeScrollbars="true"
        android:overScrollMode="never">
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:background="@drawable/discussion"
                android:contentDescription="@string/ic_google_svg" />
            <TextView android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/inter_bold"
                android:gravity="center"
                android:text="@string/register_text"
                android:textColor="@color/primary_dark_color"
                android:textSize="30sp" />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_input"
                android:ems="10"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/email_hint_text"
                android:inputType="textEmailAddress"
                android:paddingVertical="18dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                android:background="@drawable/rounded_input"
                android:drawableEnd="@drawable/visivility"
                android:ems="10"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/enter_password_text"
                android:inputType="textPassword"
                android:paddingVertical="15dp" />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirmPasswordField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/rounded_input"
                android:drawableEnd="@drawable/visivility"
                android:ems="10"
                android:fontFamily="@font/inter_regular"
                android:hint="@string/confirm_password_text"
                android:inputType="textPassword"
                android:paddingVertical="15dp" />
            <Button android:id="@+id/registerButton"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="13dp"
                android:background="@drawable/button_shadow"
                android:fontFamily="@font/inter_semi_bold"
                android:text="@string/register_text"
                android:textColor="@color/default_text_dark_color"
                android:textSize="18sp" />

          <LinearLayout
              android:id="@+id/sectionBack"
              android:layout_marginTop="30dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:gravity="start"
              android:orientation="horizontal">
              <ImageView
                  android:translationY="-2dp"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:background="@drawable/baseline_arrow_back_ios_24"
                  />
              <TextView android:id="@+id/textView3"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="20dp"
                  android:fontFamily="@font/inter_medium"
                  android:text="@string/back_text"
                  android:textColor="@color/grey_color" />
          </LinearLayout>



        </LinearLayout>
    </ScrollView>
</LinearLayout>